# pytkfaicons

./: .gitignore  BACKLOG.md  CHANGELOG.md  LICENSE  LICENSE.md  MANIFEST.in  README.md  flake8.cfg  pyproject.toml  run_prep.py  run_qs_tool.sh  run_sample.py  sample.py  setup.cfg  setup.py
pytkfaicons/: __init__.py  __main__.py  const.py  conv.py  fonts.py  icons.py  main.py
