[metadata]
keywords = python tkinter fontawesome icons svg fonts
description = tkinter fontawesome icons

long_description = file: README.md, CHANGELOG.md, BACKLOG.md, LICENSE.md
long_description_content_type = text/markdown

license = others
classifiers =
    Development Status :: 3 - Alpha
    Operating System :: POSIX :: Linux
    Operating System :: OS Independent
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python :: 3
